k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dotnet-example-service
spec:
  type: LoadBalancer
  ports:
  - port: 8069
  selector:
    app: kubernetes-dotnet-example
    environment: production
