k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dotnet-example-service
spec:
  ports:
  - port: 80
  selector:
    app: kubernetes-dotnet-example
    environment: production
